tests/bad/expr-statements/yield_type_mismatch.ae
/// fail: Yield type of branch doesn't match previous branches

def main() {
    let x = match 5 {
        0 => "hello"
        1 => 4
        else => true
    }
}